src/ui/snapshots/gitt__ui__tests__sum_06_summary_ready_snapshot.snap
---
source: src/ui/mod.rs
expression: "render_to_string(&s, 80, 12)"
---
 feature (HEAD)    origin/main
Search:   (3 matches)
✦ aaaaaaa 3 days ago    Ada Lovelace     add fuzzy search (HEAD, feature)
  bbbbbbb 5 days ago    Bo               fix flaky test
  ccccccc 2 weeks ago   Cy               refactor parser


┌ai summary────────────────────────────────────────────────────────────────────┐
│Adds an in-process fuzzy finder so the commit list filters as you type.       │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
j/k · /search · Tab preview · @ summary · s expand · ←/→ view · Enter · R fetch
